fixed toggle close and add gap in status message

--- a/client/src/components/StudentSideMenu/StudentSideMenu.scss
+++ b/client/src/components/StudentSideMenu/StudentSideMenu.scss
@@ -165,6 +165,11 @@
     margin: 5px 0;
     max-width: 250px;
   }
+  .toggle-close {
+    div {
+      top: 3px;
+    }
+  }
   // user info 
   .user-info {
     img {
@@ -190,5 +195,13 @@
       }
     }
     margin-right: 0;
+  }
+}
+
+@media screen and (min-width: 375px) {
+  .toggle-close {
+    div {
+      top: 15px;
+    }
   }
 }
